# api-spec.yaml
@@ -108,7 +108,24 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/GetEpisodeRecommendationsResponse'
-        
+  /get-best-podcasts:
+    get:
+      summary: "Fetch the best podcasts."
+      description: "Returns the best podcasts."
+      operationId: "GetTheBestPodcasts"
+      produces:
+        - "application/json"
+      parameters:
+      - name: "X-ListenAPI-Key"
+        in: "header"
+        description: "Get API Key on listennotes.com/api"
+        required: true
+        type: "string"
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/BestPodcastsResponse'
 
 
 definitions:
@@ -964,4 +981,58 @@ definitions:
       type: string
       description: Episode name.
       example: 'Celebration Recap, Jason Fry and Christian Blauvelt Interviews â€“ SWBW #101'
+  BestPodcastsResponse:
+      required:
+      - has_next
+      - has_previous
+      - id
+      - listennotes_url
+      - name
+      - next_page_number
+      - page_number
+      - parent_id
+      - podcasts
+      - previous_page_number
+      - total
+      type: object
+      properties:
+        has_previous:
+          type: boolean
+        name:
+          type: string
+          description: This genre's name.
+          example: Business News
+        listennotes_url:
+          $ref: '#/definitions/BestPodcastsLNUrlField'
+        previous_page_number:
+          type: integer
+          example: 1
+        page_number:
+          type: integer
+          example: 2
+        has_next:
+          type: boolean
+          example: true
+        next_page_number:
+          type: integer
+          example: 3
+        parent_id:
+          type: integer
+          description: The id of parent genre.
+          example: 93
+        id:
+          type: integer
+          description: The id of this genre
+          example: 95
+        total:
+          type: integer
+          example: 325
+        podcasts:
+          type: array
+          items:
+            $ref: '#/definitions/PodcastSimple'
+  BestPodcastsLNUrlField:
+      type: string
+      description: Url of the list of best podcasts on [ListenNotes.com](https://www.ListenNotes.com).
+      example: https://www.listennotes.com/best-business-news-podcasts-95/
 
